src/test/kalang-snippets/error/OverrideReturnTypeCheck.kls
incompatible return type@1
override Object toString() {
    return "";
}

